--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus quibusdam
+      repellendus pariatur eveniet repudiandae ullam veniam, atque assumenda sit
+      aliquam odio officiis beatae nisi expedita reprehenderit iusto laudantium
+      earum quod.
+    </p>
+  </body>
 </html>
