--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
     />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus quibusdam
-      repellendus pariatur eveniet repudiandae ullam veniam, atque assumenda sit
-      aliquam odio officiis beatae nisi expedita reprehenderit iusto laudantium
-      earum quod.
-    </p>
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo">
+          <img src="./assets/logo.svg" alt="Logomarca Travelgram" />
+        </a>
+        <ul id="primary-menu">
+          <li>
+            <img
+              src="./assets/icons/icon-magnifying-glass.svg"
+              alt="Ícone de lupa"
+            />
+          </li>
+          <li><a href="#">Explorar</a></li>
+          <li><a href="#">Minhas viagens</a></li>
+          <li>
+            <a href="#" id="avatar">
+              <img src="./assets/avatar.png" alt="Foto do perfil" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
