--- a/index.html
+++ b/index.html
@@ -36,6 +36,37 @@
           </li>
         </ul>
       </nav>
+
+      <header>
+        <div class="container">
+          <div id="profile">
+            <img src="./assets/avatar.png" alt="Imagem do perfil" />
+            <div>
+              <h1>Isabela Torres</h1>
+              <p>
+                Amante de viagens, cultura e gastronomia. 🌍✈️<br />
+                Aqui compartilho as histórias registradas em cada clique,
+                explorando cantinhos fascinantes do nosso planeta a partir da
+                movimentada cidade de São Paulo. 🏙️📸
+              </p>
+            </div>
+          </div>
+          <ul id="info">
+            <li>
+              <img src="./assets/icons/icon-map-pin.svg" alt="" />
+              <span>São Paulo, Brazil</span>
+            </li>
+            <li>
+              <img src="./assets/icons/icon-airplane.svg" alt="" />
+              <span>37 países</span>
+            </li>
+            <li>
+              <img src="./assets/icons/icon-picture.svg" alt="" />
+              <span>240 fotos</span>
+            </li>
+          </ul>
+        </div>
+      </header>
     </div>
   </body>
 </html>
