--- a/index.html
+++ b/index.html
@@ -68,5 +68,19 @@
         </div>
       </header>
     </div>
+    <main class="container">
+      <img src="./assets/images/image1.png" alt="..." />
+      <img src="./assets/images/image2.png" alt="..." />
+      <img src="./assets/images/image3.png" alt="..." />
+      <img src="./assets/images/image4.png" alt="..." />
+      <img src="./assets/images/image5.png" alt="..." />
+      <img src="./assets/images/image6.png" alt="..." />
+      <img src="./assets/images/image7.png" alt="..." />
+      <img src="./assets/images/image8.png" alt="..." />
+      <img src="./assets/images/image9.png" alt="..." />
+      <img src="./assets/images/image10.png" alt="..." />
+      <img src="./assets/images/image11.png" alt="..." />
+      <img src="./assets/images/image12.png" alt="..." />
+    </main>
   </body>
 </html>
