--- a/index.html
+++ b/index.html
@@ -82,5 +82,12 @@
       <img src="./assets/images/image11.png" alt="..." />
       <img src="./assets/images/image12.png" alt="..." />
     </main>
+    <footer class="container">
+      <span>Travelgram &copy; 2024</span>
+
+      <span>Termos de uso</span>
+
+      <span>Política de privacidades</span>
+    </footer>
   </body>
 </html>
